--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -6,7 +6,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup BATS
-        run: git clone --branch v0.4.0 https://github.com/sstephenson/bats.git
+      - uses: mig4/setup-bats@v1
       - name: Test
-        run: bats/bin/bats tests/tests.bats
+        run: bats -r tests
