--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -8,4 +8,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: mig4/setup-bats@v1
       - name: Test
-        run: bats -r tests
+        run: bats -r test
