--- a/.lando.yml
+++ b/.lando.yml
@@ -7,6 +7,8 @@ services:
       command: tail -f /dev/null
     overrides:
       build: ./.lando/main
+      environment:
+        TERM: xterm-256color
     build:
       - chmod +x /app/gup.sh
       - echo "# GUP" >> ~/.bashrc
@@ -16,3 +18,6 @@ tooling:
   shellcheck:
     service: main
     cmd: shellcheck -s bash *.sh
+  bats:
+    service: main
+    cmd: bats -F tap test
